[metadata]
name = celsus 
version = 1.1
author = Felix Horger
author_email = felix.horger@kcl.ac.uk
description = Scientific reference manager for those with puristic taste
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/felixhorger/celsus.git
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux

[options]
packages = find:
scripts =
	scripts/celsus
install_requires =
	requests
	pylatexenc
	pdftotext
python_requires = >=3.6

